--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -11,8 +11,8 @@
         <form id="profile-form" method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Username"></label>
-                <input asp-for="Username" class="form-control" disabled />
+                <label asp-for="Input.Username"></label>
+                <input asp-for="Input.Username" class="form-control" disabled />
             </div>
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
