--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -47,6 +47,9 @@
             <div class="collapse navbar-collapse" id="navbarToggler">
                 <ul class="nav navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
+                        <a asp-page="/Contacts/Index" class="btn nav-link text-light bg-dark">Contacts</a>
+                    </li>
+                    <li class="nav-item">
                         <a asp-area="Identity" asp-page="/Account/Manage/Subscriptions" class="btn nav-link text-light bg-dark">Subscriptions</a>
                     </li>
                 </ul>
