--- a/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using RazorStripe.Areas.Identity
 @using RazorStripe.Data
-@using RazorStripe.Data.Models
+@using RazorStripe.Models
 @namespace RazorStripe.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
