--- a/Pages/_ViewImports.cshtml
+++ b/Pages/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 @using Microsoft.AspNetCore.Identity
 @using RazorStripe
 @using RazorStripe.Data
-@using RazorStripe.Data.Models
+@using RazorStripe.Models
 @namespace RazorStripe.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
