--- a/Areas/Identity/Pages/Account/Manage/Subscriptions.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Subscriptions.cshtml
@@ -14,7 +14,7 @@
                 foreach (var subscription in Model.Subscriptions)
                 {
                     <div class="alert alert-info">
-                        <strong>Status: @subscription.Status</strong> <p>@subscription.Plan.Nickname : @subscription.Plan.Amount @subscription.Plan.Currency : @subscription.Start - @subscription.CurrentPeriodEnd</p>
+                        <strong>Status: @subscription.Status</strong> <p>@subscription.Plan.Nickname : @subscription.Plan.Amount @subscription.Plan.Currency : @subscription.StartDate - @subscription.CurrentPeriodEnd</p>
                     </div>
                 }
 
@@ -48,51 +48,10 @@
             <label asp-for="PlanPrice" class="control-label"></label>
             <span class="form-control plan-price"></span>
         </div>
-        <!--TODO: Remove -->
-        @*
-            <div class="form-row">
-                <label for="card-element">
-                    Credit or debit card
-                </label>
-                <div id="card-element">
-                    <!-- a Stripe Element will be inserted here. -->
-                </div>
-
-                <!-- Used to display form errors -->
-                <div id="card-errors" role="alert"></div>
-            </div>
-            <div class="border border-warning">
-                    <div style="margin:5px">
-
-                        <div class="row">
-                            <div class="form-group col-9">
-                                <label class="control-label">Card Number</label>
-                                <input type="text" class="form-control" data-stripe="number" />
-                            </div>
-                            <div class="form-group col-3">
-                                <label class="control-label">CVC</label>
-                                <input type="text" class="form-control" data-stripe="cvc" />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label">Expiration (MM/YY)</label>
-                        </div>
-                        <div class="row">
-                            <div class="form-group col-6">
-                                <input type="text" class="form-control" data-stripe="exp-month" />
-                            </div>
-                            <div class="form-group col-6">
-                                <input type="text" class="form-control" data-stripe="exp-year" />
-                            </div>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary stripe-purchase">Confirm</button>
-                </div>
-                <div id="card-errors" role="alert"></div>*@
         <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
                 data-key="@Model.StripeKey"
                 data-email="@Model.UserEmail"
-                data-name="Dragon Mastery LLC"
+                data-name="RazorStripe"
                 data-description="RazorStripe"
                 data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
                 data-locale="auto">
@@ -103,14 +62,4 @@
 @section Scripts {
 
     <script src="~/js/Subscriptions.js"></script>
-    @*<script type="text/javascript" src="https://js.stripe.com/v3/"></script>
-        <script type="text/javascript">
-            var stripe = Stripe('pk_test_c9qOJUMWGmBxk9uWouD00gBo');
-            var elements = stripe.elements();
-
-            var card = elements.create('card');
-
-            // Add an instance of the card UI component into the `card-element` <div>
-            card.mount('#card-element');
-        </script>*@
 }
